# heta

./: .envrc  Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml
docs/: development.md  lifecycle.md
src/: README.md  action.rs  app.rs  components.rs  config.rs  main.rs  page.rs  resource_selector.rs  utils.rs
src/aws/: mod.rs  profiles.rs  s3.rs  state.rs
src/components/: breadcrumb.rs  command_bar.rs  header.rs  home.rs  main_layout.rs  profiles.rs  s3_buckets.rs  s3_objects.rs
src/components/common/: breadcrumb.rs  command_bar.rs  empty_area.rs  fps.rs  header.rs  mod.rs  resource_selector.rs  resource_table.rs
src/views/: mod.rs  profiles.rs
