[package]
name = "heta"
version = "0.1.0"
edition = "2024"
description = "opinionated terminal ui for aws resources"
authors = ["Dixit Sabharwal <dixitsa@amazon.de>"]
build = "build.rs"
repository = "ssh://git.amazon.com/pkg/heta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-runtime = "1.7.2"
aws-sdk-s3 = "1.127.0"
aws-types = "1.3.14"
better-panic = "0.3.0"
clap = { version = "4.5.20", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
jiff = "0.2.23"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.161"
pretty_assertions = "1.4.1"
rat-ftable = "2.2.0"
ratatui = { version = "0.30.0", features = ["serde", "macros"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-input = { version = "0.15.0", features = ["ratatui-crossterm"] }

[build-dependencies]
anyhow = "1.0.90"
vergen-gix = { version = "9.1.0", features = ["build", "cargo"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
